syntax = "proto3";

option csharp_namespace = "Gateway.Protos";

import "Protos/google/api/annotations.proto";

package ShoppingCart;

service ShoppingCartService {
	rpc AddToCart (ItemCreation) returns (ShoppingCartItem) {
		option (google.api.http) = {
			post: "/shopping-cart"
			body: "*"
		};
	}
}

message ItemCreation {
	int32 tour_id = 1;
	string tour_name = 2;
	double price = 3;
}

message ShoppingCart {
	int64 id = 1;
	int64 user_id = 2;
	double total_price = 3;
	repeated ShoppingCartItem items = 4;
}

message ShoppingCartItem {
	int64 id = 1;
	int64 shopping_cart_id = 2;
	int32 tour_id = 3;
	string tour_name = 4;
	double price = 5;
}